# fastapi_auth

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
fastapi_auth0/: __init__.py  _version.py  auth.py
tests/: app.py  test_app_auth.py  test_auth.py
